fix: polish text

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -21,9 +21,9 @@ The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) receive
 
 ## Overview
 
-The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
-Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
+Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
 :::info
 Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -72,24 +72,24 @@ extend type Mutation {
 ```
 
 :::info
-If you want to check out the full GraphQL schema that's generated during the scaffolding process, take a look at the [template](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) that's used in the process.
+If you want to check out the full GraphQL schema that's generated during the scaffolding, take a look at the [template](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) that's used in the process.
 :::
 
 ### Storing and Retrieving Data
 
-All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [AWS DynamoDB](https://aws.amazon.com/dynamodb/), which is by default defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
+All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [AWS DynamoDB](https://aws.amazon.com/dynamodb/), which is defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
 
 For all database interactions, the generated application code relies on a library called [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox):
 
 > The DynamoDB Toolbox is a set of tools that makes it easy to work with Amazon DynamoDB and the DocumentClient. It's designed with Single Tables in mind, but works just as well with multiple tables.
 
-Note that if you prefer a different library, like for example the [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html)), you're free to use it, but it will require some manual migration work.
+Note that if you prefer a different library, like for example the [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html), you're free to use it, but it will require some manual migration work.
 
 ### Multi-Locale Support Enabled
 
 By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
 
-The generated application code follows the same idea. There aren't any additional steps that need to be taken in order to enable multi-locale support.
+The generated application code follows the same idea. There aren't any additional steps that you need to takefyo in order to enable multi-locale support.
 
 ### Testing Setup
 
@@ -103,7 +103,7 @@ A brief overview of different types of tests can be found in the [CI/CD / Testin
 
 The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql)).
 
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi), and reference added and deployed resources in your application code.
+Of course, if additional cloud infrastructure resources are needed, you're free to amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi), and reference the added and deployed resources in your application code.
 
 ## Development
 
@@ -117,19 +117,19 @@ By default, all of the files are generated in a new folder, located at `api/code
 
 [`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts)
 
-This is the entrypoint file, which exports the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts) plugin responsible for extending the existing GraphQL API's schema, using new [type definitions](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L13) and supporting [resolvers](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L14-L25).
+This is the entry file, which exports the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts) plugin responsible for extending the existing GraphQL API schema, using new [type definitions](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L13) and supporting [resolvers](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L14-L25).
 
 [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts)
 
-A file that contains the schema with which we are extending our GraphQL API. This will usually be the starting point if you wanted to make further changes to the generated code, for example adding new fields to the initial data model, adding new GraphQL query or mutation operations, and more.
+A file that contains the schema with which we are extending our GraphQL API. This will usually be the starting point if you want to make further changes to the generated code, for example add new fields to the initial data model, add new GraphQL query or mutation operations, and more.
 
-Note that in the case of the latter, you will also need to define a standalone resolver function that will be responsible for handling newly added query or mutation operation.
+Note that in the case of the latter, you also need to define a standalone resolver function that is responsible for handling newly added query or mutation operation.
 
 [`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
 
 This folder contains the GraphQL resolver classes that support the generated [query](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) and [mutation](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsMutation.ts) GraphQL operations.
 
-These will need be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
+These will need to be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
 
 [`entities/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
 
@@ -155,7 +155,7 @@ yarn webiny watch api/code/graphql --env {env}
 
 With the new watch session initialized, every change you make in the code will automatically trigger a re-deploy of the code, enabling you to see the changes in the cloud almost immediately as you make them (every redeployment takes 2-4 seconds to complete).
 
-And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend new code is tested via one or more of the mentioned types of tests.
+And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more of the mentioned types of tests.
 
 ### Writing and Running Tests
 
@@ -179,7 +179,7 @@ An integration test which ensures essential CRUD GraphQL query and mutation oper
 
 An end-to-end (E2E) test which ensures essential CRUD GraphQL query and mutation operations are working as expected.
 
-Note that although it may seem this test is testing the same functionality we've tested with the integration test, this test is run against the application code that's deployed into the actual cloud, by issuing HTTP requests to the deployed Cloudfront distribution, behind which our AWS Lambda function resides. In other words, this test makes sure not only our code is working as expected, but also that the cloud infrastructure resources are deployed and configured properly.
+Note that, although it may seem this test is testing the same functionality we've tested with the integration test, this test is run against the application code that's deployed into the actual cloud, by issuing HTTP requests to the deployed Cloudfront distribution, behind which our AWS Lambda function resides. In other words, this test makes sure not only our code is working as expected, but also that the cloud infrastructure resources are deployed and configured properly.
 
 <!-- With unit tests ([`typeDefs.unit.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/typeDefs.unit.test.ts)), we test a single unit in our code, for example a specific business logic located within a specific function or a class. These tests are the fastest to run simply because no cloud infrastructure resources need to be deployed in order for them to be run. Otherwise we're talking about integration tests. -->
 
@@ -203,7 +203,7 @@ You are free to create new tests in the similar fashion, or amend the existing o
 
 ## FAQ
 
-#### How does security (authorization, authorization) work?
+#### How does security (authorization and authentication) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
 
@@ -211,6 +211,6 @@ Luckily, with a couple of built-in utilities, this can be relatively easily adde
 
 #### I need more flexibility when it comes to data querying. Can I bring in a different database, for example ElasticSearch?
 
-Yes, you can. You can actually utilize the already deployed ElasticSearch cluster that's by default deployed with every Webiny project.
+Yes, you can. You can actually utilize the already deployed ElasticSearch cluster that's deployed with every Webiny project, by default.
 
 Until we create a dedicated tutorial on the topic, feel free to ping us via our community [Slack](https://www.webiny.com/slack).
