fix: polish text

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -28,7 +28,7 @@ The **Extend Admin Area** scaffold (previously **Admin Area Package**) received 
 The **Extend Admin Area** scaffold creates a new module in the Webiny Admin Area React application and extends your GraphQL API with
 supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
-Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
+Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
 :::info
 Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -96,7 +96,7 @@ By default, all of the files are generated in a new folder, located at `apps/adm
 
 [`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts)
 
-This is the entrypoint file, which exports the [`menus`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L1) and [`routes`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L2) plugins.
+This is the entry file, which exports the [`menus`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L1) and [`routes`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L2) plugins.
 
 [`menus.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/menus.tsx)
 
@@ -160,7 +160,7 @@ Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/
 
 ## FAQ
 
-#### How does security (authorization and authorization) work?
+#### How does security (authentication and authorization) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
