--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -203,7 +203,7 @@ You are free to create new tests in the similar fashion, or amend the existing o
 
 ## FAQ
 
-#### How does security (authorization and authentication) work?
+#### How does security (authentication and authorization) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
 
