fix: add link to the new scaffolding section

--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -38,12 +38,9 @@ To learn more about the changes we made and the reasoning behind them, check out
 :::
  -->
 
-<!--
-
 :::info
-To learn more about scaffolding and all of the available scaffolds, check out the [Scaffolding](#) how-to guides section.
+To learn more about scaffolding and all of the available scaffolds, check out the [Scaffolding](/docs/how-to-guides/webiny-cli/scaffolding/introduction) how-to guides section.
 :::
- -->
 
 #### Extend GraphQL API (previously GraphQL API Package)
 
