fix: add multi-tenancy FAQ

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -214,3 +214,11 @@ Luckily, with a couple of built-in utilities, this can be relatively easily adde
 Yes, you can. You can actually utilize the already deployed ElasticSearch cluster that's deployed with every Webiny project, by default.
 
 Until we create a dedicated tutorial on the topic, feel free to ping us via our community [Slack](https://www.webiny.com/slack).
+
+#### Can Webiny's multi-tenancy feature be utilized with this scaffold?
+
+Yes, but do note that since multi-tenancy is part of Webiny's enterprise offering, the relevant multi-tenancy code is not included in the generated application code.
+
+For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/key-topics/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
+
+
