--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -165,3 +165,10 @@ Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/create-an-application/security/introduction) to learn how to implement these on your own.
+
+
+#### Can Webiny's multi-tenancy feature be utilized with this scaffold?
+
+Yes, but do note that since multi-tenancy is part of Webiny's enterprise offering, the relevant multi-tenancy code is not included in the generated application code.
+
+For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/key-topics/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
