wip: create Extend Admin Area tutorial

--- a/docs/tutorials/extend-admin-area/graphql-api.mdx
+++ b/docs/tutorials/extend-admin-area/graphql-api.mdx
@@ -1,7 +1,7 @@
 ---
-id: api-package
-title: API Package
-sidebar_label: API Package
+id: graphql-api
+title: GraphQL API
+sidebar_label: GraphQL API
 keywords: ["webiny", "scaffold", "boilerplate", "api"]
 description: Quickly create and deploy API package.
 ---
