--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -1,7 +1,7 @@
 ---
-id: admin-area
-title: Admin Area
-sidebar_label: Admin Area
+id: admin-area-package
+title: Admin Area Package
+sidebar_label: Admin Area Package
 keywords: ["webiny", "scaffold", "boilerplate", "admin"]
 description: Quickly create and deploy Admin area package.
 ---
