--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -1,7 +1,7 @@
 ---
-id: graphql-api
-title: GraphQL API
-sidebar_label: GraphQL API
+id: api-package
+title: API Package
+sidebar_label: API Package
 keywords: ["webiny", "scaffold", "boilerplate", "api"]
 description: Quickly create and deploy API package.
 ---
