fix: uncomment blog post link

--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -28,12 +28,9 @@ For this release, we've gone through a complete overhaul of the existing **Graph
 
 <CenteredImage title="Improved Scaffolding" src={scaffolds} />
 
-<!--
-
 :::tip
-To learn more about the changes we made and the reasoning behind them, check out the dedicated [Webiny 5.9.0 - Improved Scaffolding](#) blog post.
+To learn more about the changes we made and the reasoning behind them, check out the dedicated [Webiny 5.9.0 - Improved Scaffolding](https://www.webiny.com/blog/webiny-v5.9.0-improved-scaffolds-and-development) blog post.
 :::
- -->
 
 :::info
 To learn more about scaffolding and all of the available scaffolds, check out the [Scaffolding](/docs/how-to-guides/webiny-cli/scaffolding/introduction) how-to guides section.
