--- a/docs/changelog/5.10.0.mdx
+++ b/docs/changelog/5.10.0.mdx
@@ -24,10 +24,23 @@ Please check the [Webiny 5.10.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ## Development
 
-### Minor Scaffolding Improvements([#222](https://github.com/webiny/webiny-js/pull/222))
+### Admin Area React Application - Reduced Deployment Time ([#1740](https://github.com/webiny/webiny-js/pull/1740))
 
-✍️
+Prior to this release, every time we'd deploy the Admin Area project application and its React application, all of the production build files (JS, CSS, images) would be re-uploaded from scratch. This would happen even in cases where there are no changes between the files.
 
-### Improved Admin React Application Deployment([#333](https://github.com/webiny/webiny-js/pull/333))
+From now on, files whose content didn't change simply won't be uploaded. This will significantly speed up the deployment of the Admin Area project application.
 
-✍️
+
+### Improved Existing Scaffolds ([#1739](https://github.com/webiny/webiny-js/pull/1739))
+
+A couple of minor fixes and improvements were made to the [scaffolding utilities](/docs/how-to-guides/webiny-cli/scaffolding/introduction), introduced in the previous [Webiny 5.9.0](/docs/changelog/5.9.0) release.
+
+Maybe the most significant change would be the default path, in which the application code will be generated. For example, when running the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api), we've changed the `api/code/graphql/src/plugins/scaffolds/graphql` to `api/code/graphql/src/plugins/scaffolds`. So, we've decided to remove the trailing `graphql` folder, simply because we've noticed it's unnecessary.
+
+For other changes, please see the [linked PR](https://github.com/webiny/webiny-js/pull/1739).
+
+<!-- https://github.com/webiny/webiny-js/pull/1755 -->
+<!-- https://github.com/webiny/webiny-js/pull/1753 -->
+<!-- https://github.com/webiny/webiny-js/pull/1752 -->
+<!-- https://github.com/webiny/webiny-js/pull/1746 -->
+<!-- https://github.com/webiny/webiny-js/pull/1740 -->
