--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -1,7 +1,7 @@
 ---
-id: scaffolding
-title: Scaffolding
-sidebar_label: Scaffolding
+id: getting-started
+title: Getting Started
+sidebar_label: Getting Started
 keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
 description: Introduction into how to quickly create and deploy API and Admin area applications.
 ---
@@ -21,8 +21,12 @@ import scaffoldsFullOutput from "./scaffolding/scaffold-full-output.png";
 
 The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces (plugins) for us. This includes the necessary plugins which will create the following:
 
-- Admin Area React application - a new route, menu item, and a CRUD view
+- Admin Area React application - a new route, menu item, and a [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) view
 - GraphQL API - supporting GraphQL query and mutation operations
+
+:::info
+The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be.
+:::
 
 So, in our terminal of choice, from our project root, let's run the following command:
 
@@ -44,7 +48,7 @@ For the first two, we can just use the default paths by simply pressing the **En
 
 Once we've answered all of the questions, after a quick confirmation step, scaffolding will start and eventually, we should end up with the following output in our terminal:
 
-<CenteredImage shadow={false} alt="Extend Admin Area - Full Output" src={scaffoldsFullOutput}/>
+<CenteredImage alt="Extend Admin Area - Full Output" src={scaffoldsFullOutput}/>
 
 ## Using the Watch Command
 
@@ -94,12 +98,12 @@ The following screenshot shows the two watch commands run side-by-side in two se
 
 ### Admin Area
 
-Once the two watch sessions have been run, in our Admin Area, we should be able to see the new **Car Manufacturers** module:
+Once the two watch sessions have been started, in our Admin Area, we should be able to see the new **Car Manufacturers** module and, via the generated [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area/#new-webiny-admin-area-module), perform essential CRUD operations.
 
 <CenteredImage shadow={false} alt="New Car Manufacturers Module" src={scaffoldsAdminArea}/>
 
 :::tip
-By default, our Admin Area React application should be locally accessible via [http://localhost:3001](http://localhost:3001).
+By default, the Admin Area React application should be locally accessible via [http://localhost:3001](http://localhost:3001).
 :::
 
 ## Further Development
