fix: update links

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -28,7 +28,7 @@ The **Extend Admin Area** scaffold (previously **Admin Area Package**) received 
 The **Extend Admin Area** scaffold creates a new module in the Webiny Admin Area React application and extends your GraphQL API with
 supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
-Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
+Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
 :::info
 Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -44,7 +44,7 @@ As mentioned in the overview, the scaffold creates a new module in the Webiny Ad
 2. a new route (URL) on which the CRUD view is being rendered
 3. a new item in the main menu, which, when clicked, redirects the user to the new route (URL)
 
-As an example, during the scaffold's wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
+As an example, during the scaffold's wizard, if we were to enter **CarManufacturer** as the initial data model name, we'd end up with the following:
 
 1. a CRUD view which lets us perform basic CRUD operations on car manufacturer entries
 2. a new `/car-manufacturers` route
@@ -76,12 +76,12 @@ The locales selector is visible only when there are two or more locales to choos
 
 ### No Additional Cloud Infrastructure Resources
 
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/code)).
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/code)).
 
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference the added and deployed resources in your application code.
+Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference the added and deployed resources in your application code.
 
 :::tip
-Note that the supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
+Note that the supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
 :::
 
 ## Development
@@ -91,7 +91,7 @@ Note that the supporting GraphQL API has its own cloud infrastructure code, loca
 The following are the most essential files and folders that are generated in the scaffolding process.
 
 :::info
-By default, all of the files are generated in a new folder, located at `apps/admin/code/src/plugins/scaffolds/admin/{dataModelName}`, for example `apps/admin/code/src/plugins/scaffolds/admin/carManufacturers`.
+By default, all of the files are generated in a new folder, located at `apps/admin/code/src/plugins/scaffolds/{dataModelName}`, for example `apps/admin/code/src/plugins/scaffolds/carManufacturers`.
 :::
 
 [`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts)
@@ -106,9 +106,9 @@ Export a single [`MenuPlugin`](https://github.com/webiny/webiny-js/blob/9e490409
 
 Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin that's responsible for creating a new route (URL), on which the CRUD view will be rendered. This is where the actual React component that form the CRUD view are referenced.
 
-[`views/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views)
+[`views/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-admin-app-module/template/views)
 
-Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view. The main parent component is exported in the [`views/index.tsx`](https://github.com/webiny/webiny-js/blob/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/index.tsx#L10) file.
+Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view. The main parent component is exported in the [`views/index.tsx`](https://github.com/webiny/webiny-js/blob/v5.10.0/packages/cli-plugin-scaffold-admin-app-module/template/views/index.tsx#L10) file.
 
 ### First Deploy
 
@@ -146,25 +146,13 @@ This command initiates a watch session on the GraphQL API application code and e
 Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section for more information on how to continue developing the supporting GraphQL API.
 :::
 
-<!-- ### Adding New Fields -->
-
-<!-- As mentioned in the overview, initially, all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. -->
-
-<!-- When in need to modify existing or add new fields, note that we need to perform changes in both the generated Admin Area module (CRUD view) and on the GraphQL API side. -->
-
-<!-- #### Admin Area Module -->
-
-<!-- New fields can be added in the generated [`Form`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/views/TargetDataModelsForm.tsx#L50-L82) component -->
-
-<!-- To add new fields in the CRUD view's form, -->
-
 ## FAQ
 
 #### How does security (authentication and authorization) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/create-an-application/security/introduction) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
 
 
 #### Can Webiny's multi-tenancy feature be utilized with this scaffold?
