feat(how-to-guides): add elasticsearch gist

--- a/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
@@ -24,10 +24,16 @@ Make sure to check out the [5.10.0 changelog](/docs/changelog/5.10.0) to get fam
 
 First, we need to prepare your project for the upgrade process. With security packages refactor, some packages no longer exist, and if we try to upgrade dependencies straight away, `yarn` will complain. To fix that, we need to clean up your project first, to eliminate references to those deprecated packages.
 
+Also, we changed the name of our shared Elasticsearch package from `api-plugin-elastic-search-client` to `api-elasticsearch`, and we have prepared a gist for that as well.
+
 In your project root, run the following:
 
 ```bash
 npx https://gist.github.com/Pavel910/abc4c063eae8c18754d6a026d1fc1d06
+```
+For the Elasticsearch package change, run the following:
+```bash
+npx https://gist.github.com/brunozoric/96e66c47abc6769947034fe707138cda
 ```
 
 ## 2. Upgrade Webiny Packages
