fix: update links

--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -11,21 +11,24 @@ import formUpdated from "./entities/form-updated.png";
 import popularCarManufacturerSaved from "./entities/popular-car-manufacturer-saved.png";
 
 :::tip WHAT YOU’LL LEARN
-- how to extend the Admin Area React application
+
+- how to continue developing on top of the generated application code
+- in the GraphQL API, how to extend the initially created entity with new attributes
+- in the Admin Area, how to extend the initially created form with new fields
+
 :::
 
 ## Overview
 
-Initially, the `CarManufacturer` entity that was created in the scaffolding process only contains two attributes: `title` and `description`. Of course, these are just starter attributes and we are certainly encouraged to extend the entity with additional ones.
+Initially, the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity that was created in the scaffolding process only contains two attributes: [`title`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L18) and [`description`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L19). Of course, these are just starter attributes and we are certainly encouraged to extend the entity with additional ones.
 
-For example, let's see how we can add the new `isPopular` boolean attribute to the initial `CarManufacturer` entity, and then, enable logged-in administrators to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element in the generated form.
+For example, let's see how we can add the new `isPopular` boolean attribute to the initial [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity, and then, enable logged-in administrators to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element into the generated form.
 
 ## GraphQL API
 
-Starting from the GraphQL API side, let's open our [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers/entities/CarManufacturer.ts#L20) entity and simply define the new attribute on it (parts of code removed for brevity):
+Starting from the GraphQL API, let's open our [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L20) entity and simply define the new attribute on it (parts of code removed for brevity):
 
 ```ts title="api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts" {14}
-
 (...)
 
 export default new Entity<CarManufacturerEntity>({
@@ -47,7 +50,7 @@ export default new Entity<CarManufacturerEntity>({
 });
 ```
 
-Notice how we're passing the [`CarManufacturerEntity`](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers/types.ts#L6) interface upon instantiating the `Entity` class. Since the interface is essentially listing all attributes that our entity consists of, let's update it as well:
+Notice how we're passing the [`CarManufacturerEntity`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/types.ts#L6) interface upon instantiating the `Entity` class. Since the interface is essentially listing all attributes that our entity consists of, let's update it as well:
 
 ```ts title="api/code/graphql/src/plugins/scaffolds/carManufacturers/types.ts" {10}
 
@@ -69,7 +72,7 @@ export interface CarManufacturerEntity {
 (...)
 ```
 
-Finally, let's update our GraphQL `CarManufacturer`-related GraphQL types in our schema, located in the [`typeDefs.ts`](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers/typeDefs.ts) file:
+Finally, let's update our `CarManufacturer` GraphQL types in our schema, located in the [`typeDefs.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) file:
 
 ```ts title="api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts" {6,15,21}
 export default /* GraphQL */ `
@@ -96,18 +99,18 @@ export default /* GraphQL */ `
     }
 
     (...)
-`
+`;
 ```
 
 :::tip
-If you've run the two [`webiny watch`](https://www.webiny.com/docs/how-to-guides/webiny-cli/use-watch-command/) commands mentioned in the [previous section](/docs/tutorials/extend-admin-area/scaffolding#using-the-watch-command), the performed application code changes should be automatically rebuilt and redeployed into the cloud.
+If you've run the two [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command/) commands, mentioned in the [previous section](/docs/tutorials/extend-admin-area/scaffolding#using-the-watch-command), the performed application code changes should be automatically rebuilt and redeployed into the cloud.
 :::
 
 Once we've done all of the above shown changes, we're ready to move on to the Admin Area React application.
 
 ## Admin Area React Application
 
-In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/apps/admin/code/src/plugins/scaffolds/admin/carManufacturers/views/CarManufacturersForm.tsx#L54) form, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in users to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
+In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) form, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in users to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
 
 ```tsx title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx" {4,18-27}
 (...)
@@ -149,34 +152,35 @@ return (
 );
 ```
 
-Once we've updated the `CarManufacturersForm` React component, the form itself should look like the following:
+Once we've updated the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx#L75-L84) React component, the form itself should look like the following:
 
-<CenteredImage alt="Updated Car Manufacturers Form" src={formUpdated}/>
+<CenteredImage alt="Updated Car Manufacturers Form" src={formUpdated} />
 
 Finally, we need to add the `isPopular` field to all relevant GraphQL query and mutation operations. This ensures that we're both sending and receiving the `isPopulate` value while interacting with the GraphQL API.
 
-Adding the `isPopular` field can be easily done by updating the [`CAR_MANUFACTURER_FIELDS_FRAGMENT`](#) fragment, located in the `graphql.ts` file:
+Adding the `isPopular` field can be easily done by updating the [`CAR_MANUFACTURER_FIELDS_FRAGMENT`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) fragment, located in the [`graphql.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) file:
 
 ```ts title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts" {8}
 import gql from "graphql-tag";
 
 export const CAR_MANUFACTURER_FIELDS = /* GraphQL */ `
-    fragment CarManufacturerFields on CarManufacturer {
-        id
-        title
-        description
-        isPopular
-        createdOn
-        savedOn
-        createdBy
-    }
+  fragment CarManufacturerFields on CarManufacturer {
+    id
+    title
+    description
+    isPopular
+    createdOn
+    savedOn
+    createdBy
+  }
 `;
 
+(...)
 ```
 
 With this final change in place, we should be able to edit the **isPopular** attribute for each car manufacturer entry. To test this, we can simply open an existing entry, try marking it as popular, and submitting the form. If everything was done correctly, the form submission should be successful.
 
-<CenteredImage alt="Updated Car Manufacturers Form" src={popularCarManufacturerSaved}/>
+<CenteredImage alt="Updated Car Manufacturers Form" src={popularCarManufacturerSaved} />
 
 ## FAQ
 
@@ -192,8 +196,6 @@ You are free to bring your own preferred NPM libraries.
 
 For data validation in general, we recommend you check out the [`@webiny/validation`](https://github.com/webiny/webiny-js/tree/next/packages/validation) library. It's easy to use, provides a plethora of different data validation rules, and also enables you to expand it with your own.
 
-
 #### What about security (authentication and authorization)?
 
-Because this is not something we can effectively predict, the generated application code does not include any authentication and authorization logic. But luckily, with a couple of [built-in utilities](https://www.webiny.com/docs/tutorials/create-an-application/security/introduction), this is not too hard to implement.
-
+Because this is not something we can effectively predict, the generated application code does not include any authentication and authorization logic. But luckily, with a couple of [built-in utilities](/docs/tutorials/create-an-application/security/introduction), this is not too hard to implement.
