--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -14,15 +14,15 @@ import scaffoldsAdminArea from "./scaffolding/scaffolds-admin-area.png";
 import scaffoldsFullOutput from "./scaffolding/scaffold-full-output.png";
 
 :::tip WHAT YOU’LL LEARN
-- how to extend the Admin Area React application
+- how to use the **Extend Admin Area** scaffold to get started in no time
 :::
 
 ## Extend Admin Area Scaffold
 
-The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces (plugins) for us. This includes the necessary plugins which will create the following:
+The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces for us. On the application code leve, this includes the necessary plugins which will create the following:
 
-- Admin Area React application - a new route, menu item, and a [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) view
-- GraphQL API - supporting GraphQL query and mutation operations
+- in the Admin Area React application: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
+- in the GraphQL API: supporting GraphQL query and mutation operations
 
 :::info
 The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be.
@@ -40,9 +40,9 @@ Running this command should give us the following list of available scaffolds:
 
 Once we've selected the **Extend Admin Area** scaffold from the list, we'll get presented with the the following three questions:
 
-1. the path to our GraphQL API's plugins folder (api/code/graphql/src/plugins by default)
-2. the path to our Admin Area React application's plugins folder (apps/admin/code/src/plugins by default)
-3. the name of the initial data model (entity)
+1. the path to our GraphQL API's plugins folder (`api/code/graphql/src/plugins` by default)
+2. the path to our Admin Area React application's plugins folder (`apps/admin/code/src/plugins` by default)
+3. the name of the initial entity
 
 For the first two, we can just use the default paths by simply pressing the **Enter** key. As the answer to the last question, we'll enter **CarManufacturer**.
 
@@ -86,7 +86,7 @@ yarn webiny watch apps/admin --env dev
 
 #### No Initial Deployment
 
-Unlike with the shown GraphQL API watch command, no automatic deployments will occur upon running this command. Frontend application development is still being done locally on your machine.
+In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, Admin Area React application can be developed locally. Meaning, once the watch command is run, no automatic deployments into the cloud will occur.
 
 ## Final Result
 
@@ -110,4 +110,4 @@ By default, the Admin Area React application should be locally accessible via [h
 
 Once we got the initial **Car Manufacturers** Admin Area module working, we can proceed by modifying and extending it to our needs.
 
-Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers/entities/CarManufacturers.ts#L14) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes on the to the Admin Area React application side, by adding new fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/blog/webiny-v5.9.0-improved-scaffolds-and-development/apps/admin/code/src/plugins/scaffolds/admin/carManufacturers/views/CarManufacturersForm.tsx#L54) React component and accordingly updating GraphQL queries and mutations that were initially generated.
+Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area React application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating GraphQL queries and mutations that were initially generated, accordingly.
