--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -2,8 +2,8 @@
 id: extending-entities
 title: Extending Entities
 sidebar_label: Extending Entities
-keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
-description: Introduction into how to quickly create and deploy API and Admin area applications.
+keywords: ["extend", "admin", "area", "graphql", "api", "scaffolding"]
+description: Learn how to continue developing on top of the generated application code, by extending the initially generated entity with new attributes.
 ---
 
 import CenteredImage from "@components/CenteredImage";
