--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -2,10 +2,9 @@
 id: getting-started
 title: Getting Started
 sidebar_label: Getting Started
-keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
-description: Introduction into how to quickly create and deploy API and Admin area applications.
+keywords: ["extend", "admin", "area", "graphql", "api", "scaffolding"]
+description: Learn how to use the existing Extend Admin Area scaffold in order to start extending your Admin Area application in no time.
 ---
-
 
 import CenteredImage from "@components/CenteredImage";
 import watchSessions from "./scaffolding/watch-sessions.png";
