feat(how-to-guides): remove old guide text

--- a/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
@@ -22,16 +22,10 @@ Make sure to check out the [5.10.0 changelog](/docs/changelog/5.10.0) to get fam
 
 ## 1. Project Preparation
 
-First, we need to prepare your project for the upgrade process. With security packages refactor, some packages no longer exist, and if we try to upgrade dependencies straight away, `yarn` will complain. To fix that, we need to clean up your project first, to eliminate references to those deprecated packages.
-
-Also, we changed the name of our shared Elasticsearch package from `api-plugin-elastic-search-client` to `api-elasticsearch`, and we have prepared a gist for that as well.
+First, we need to prepare your project for the upgrade process.
+We changed the name of our shared Elasticsearch package from `api-plugin-elastic-search-client` to `api-elasticsearch`, and we have prepared a gist for that.
 
 In your project root, run the following:
-
-```bash
-npx https://gist.github.com/Pavel910/abc4c063eae8c18754d6a026d1fc1d06
-```
-For the Elasticsearch package change, run the following:
 ```bash
 npx https://gist.github.com/brunozoric/96e66c47abc6769947034fe707138cda
 ```
@@ -60,17 +54,7 @@ yarn webiny upgrade 5.10.0
 
 The upgrade script will make a couple of changes to your existing **API** project application's code (located within the `api` folder). Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
-## 4. Post Upgrade Script
-
-To finalize the upgrade, run the following command:
-
-```bash
-npx https://gist.github.com/Pavel910/4a7a9694945fffcc65b293de8091116b
-```
-
-This takes care of a small glitch in the upgrade process, which we noticed _after_ we released the 5.10.0 code. Gists to the rescue!
-
-## 5. Deploy Your Project
+## 4. Deploy Your Project
 
 Finally, proceed by re-deploying your Webiny project:
 
@@ -89,18 +73,4 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 
 ## Additional Steps and Notes
 
-### GraphQL API Package Scaffold
 
-If you've been using the **GraphQL API Package** scaffold in your Webiny project prior to the `5.10.0` release, you will have to revisit the created [`types.ts`](https://github.com/webiny/webiny-js/blob/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/src/types.ts#L7) file for each created package, and replace the following line:
-
-```ts
-import { TenancyContext } from "@webiny/api-security-tenancy/types";
-```
-
-Replace it with the following import statement:
-
-```ts
-import { TenancyContext } from "@webiny/api-tenancy/types";
-```
-
-This change is required simply because the `@webiny/api-security-tenancy` package doesn't exist anymore. Note that the new `@webiny/api-tenancy` package should already exist in your project, so there's no need to add it manually.
